# FaceDetection

./: pyproject.toml  test.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/faces_collection/: config.json
qdrant_storage/collections/faces_collection/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/faces_collection/0/segments/19818908-1dc8-4cb9-aa39-abcd3b24b7e5/: 000009.sst  000010.sst  000011.sst  000013.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/faces_collection/0/segments/19818908-1dc8-4cb9-aa39-abcd3b24b7e5/payload_index/: IDENTITY  LOG
qdrant_storage/collections/faces_collection/0/segments/25b2bfae-586f-4dd2-a7c4-8a963b08ec5f/: 000009.sst  000010.sst  000011.sst  000013.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/faces_collection/0/segments/56375e47-efcb-48e0-b381-6332f974ad76/: 000009.sst  000010.sst  000011.sst  000013.sst  000015.sst  000016.sst  000018.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/faces_collection/0/segments/bff70ed0-dd27-4736-ad51-63ac7e6b217d/: IDENTITY  LOG  segment.json
qdrant_storage/collections/faces_collection/0/segments/e3c0af49-129a-4db2-b686-fcc86dc7a4ac/: 000009.sst  000010.sst  000011.sst  000013.sst  000015.sst  000016.sst  000018.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007  segment.json
qdrant_storage/collections/faces_collection/0/wal/: first-index
src/: main.py
(+10 files in other folders)
